populated with some real info

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,16 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Ricky Zhang
+avatar: /static/images/avatar.JPG
+occupation: Advanced Computer Science Student
+company: Monash University
+email: rickyzhang2013@hotmail.com
+linkedin: https://www.linkedin.com/in/rickyzhang10/
+github: https://github.com/Rikidink/
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Ricky Zhang is student at Monash University Australia, studying a Bachelor of Computer Science with a specialisation in Advanced Computer Science.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+Ricky is passionate in all things tech, whether it's programming, computer science, cybersecurity, or simply keeping up with the latest trends in the industry.
+With a strong focus on the theoretical side of computer science, he wishes to share all of the amazing and cool stuff about computer science and programming!
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Ricky specialises in algorithms and data structures but loves developing web apps in his spare time.
