made hash table public

--- a/data/blog/hash-table.mdx
+++ b/data/blog/hash-table.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Hash Tables: A Deep Dive'
 date: '2024-06-5'
-tags: ['data_structures']
-draft: true
+tags: ['data_structures', 'guide']
+draft: false
 summary: A detailed overview of one of my favourite data
   structures...hash tables! Including different conflict resolution
   strategies (First blog post on the platform!).
